--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JS Development Environment",
   "main": "app.js",
   "scripts": {
+    "start": "node buildScripts/srcServer.js",
     "test": "test"
   },
   "repository": {
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/mikewrosey/devEnv#readme",
   "devDependencies": {
+    "@types/node": "^7.0.12",
     "chai": "^3.5.0",
     "express": "^4.15.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "open": "0.0.5"
   }
 }
