--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devenv",
   "version": "1.0.0",
   "description": "JS Development Environment",
-  "main": "app.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "node buildScripts/srcServer.js",
     "test": "test"
@@ -22,6 +22,10 @@
     "chai": "^3.5.0",
     "express": "^4.15.2",
     "mocha": "^3.2.0",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "tslint": "^5.2.0",
+    "tslint-loader": "^3.5.3",
+    "webpack": "^2.1.0-beta.21",
+    "webpack-dev-middleware": "^1.10.2"
   }
 }
